[build-system]
requires = ["setuptools>=30.3.0", "wheel"]#, "setuptools_scm[toml]"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 140
target-version = ['py36']
skip-string-normalization = true

[pydocstyle]
inherit = false
match = '*.py'

# pyproject.toml
#[tool.setuptools_scm]
