[metadata]
name = re-emission
author = Tomasz Janus (dev), Aung Kyaw Kyaw (dev), Chris Barry (methodology)
author_email = tomasz.k.janus@gmail.com
description = Calculator of GHG emissions from man-made reservoirs
long_description = file: README.md
long_description_content_type = text/markdown
license = file: LICENSE
project_urls =
    Bug Tracker = https://github.com/tomjanus/re-emission/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
zip_safe = False
package_dir = src
packages = find:
install_requires =
    numpy
    yaml
    matplotlib
    pylatex

[options.packages.find]
where = src
