[metadata]
name = reemission
version = 0.0.1
author = Tomasz Janus (dev), Aung Kyaw Kyaw (dev), Chris Barry (methodology)
author_email = tomasz.k.janus@gmail.com
description = Module for calculating GHG emissions from man-made reservoirs
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = gas emissions, biogenic, reservoirs, water, anthropogenic
url = https://github.com/tomjanus/reemission
project_urls =
    Documentation = https://enter_github_pages_site_here
    Source Code = https://github.com/tomjanus/reemission/
    Bug Tracker = https://github.com/tomjanus/reemission/issues

[options]
zip_safe = False
include_package_data = True
python_requires = >=3.7
packages = find:
install_requires =
    click
    numpy
    matplotlib
    pylatex
    notebook
    pyyaml
    quantities

[options.packages.find]
where = src

[options.extras_require]
test =
    pytest
    unittest
    coverage

[options.entry_points]
console_scripts=
    reemission=src.cli:start_cli

[files]
packages = src/reemission

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True
show_error_codes = True
