[metadata]
license = MIT License
license_files = LICENSE
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: Implementation :: CPython
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Environment :: Console
    Natural Language :: English
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science
    Topic :: Scientific/Engineering :: Hydrology
    Topic :: Scientific/Engineering :: GIS
    Topic :: Scientific/Engineering :: Bio-Informatics
keywords = gas emissions, biogenic, reservoirs, water, anthropogenic
url = https://github.com/tomjanus/reemission
project_urls =
    Documentation = https://enter_github_pages_site_here
    Source Code = https://github.com/tomjanus/reemission/
    Bug Tracker = https://github.com/tomjanus/reemission/issues
    Changelog = https://reemission.readthedocs.io/en/latest/changelog.html

[options]
include_package_data = True
packages = find:
python_requires = >=3.6
install_requires =
    click
    numpy
    pandas
    geopandas
    matplotlib
    pylatex
    notebook
    pyyaml
    quantities
    pyfiglet
    openpyxl
    gdown
    PyYAML
    toml
    pydantic==1.10
    folium
    branca
    fpdf
    geojson
    rich-click

[options.extras_require]
dev =
    pytest
    unittest2
    coverage
    check-manifest

lint =
    flake8
    pylint

docs =
    myst-parser
    sphinx_rtd_theme

[options.entry_points]
console_scripts=
    reemission=reemission.cli.cli:main
    reemission-geocaret=reemission.integration.cli.cli:geocaret_integrate

[mypy]
ignore_missing_imports = True
no_implicit_optional = True
warn_redundant_casts = True
warn_unused_ignores = False
pretty = True
show_error_codes = True

[pydocstyle]
inherit = false
ignore = D100, D203, D405, D212, D213
match = .*\.py

[flake8]
max-line-length = 140
exclude = .tox,.eggs,ci/templates,build,dist

[tool:isort]
force_single_line = True
line_length = 120
known_first_party = reemission
default_section = THIRDPARTY
forced_separate = test_reemission
skip = .tox,.eggs,ci/templates,build,dist
